# uwsgi

./: .gitignore  CMakeLists.txt  uwsgi.h  uwsgiconfig.py
apache2/: mod_Ruwsgi.c
core/: event.c  fifo.c  gateway.c  hash.c  master.c  master_checks.c  master_events.c  master_utils.c  mule.c  plugins.c  queue.c  rpc.c  socket.c  stats.c  subscription.c  utils.c  uwsgi.c
plugins/corerouter/: corerouter.c  cr.h  cr_common.c
plugins/fastrouter/: fastrouter.c
plugins/python/: pyloader.c  python_plugin.c
proto/: base.c  uwsgi.c
