cmake_minimum_required(VERSION 3.2)
project(uwsgi)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

include_directories(. core)
set(SOURCE_FILES
    apache2/mod_proxy_uwsgi.c
    apache2/mod_Ruwsgi.c
    apache2/mod_uwsgi.c
    contrib/cgi_python.c
    contrib/uwsgi_client.c
    contrib/uwsgi_dynamic_client.c
    core/alarm.c
    core/async.c
    core/buffer.c
    core/cache.c
    core/chunked.c
    core/clang_fake.c
    core/clock.c
    core/config.c
    core/cookie.c
    core/cron.c
    core/daemons.c
    core/emperor.c
    core/errors.c
    core/event.c
    core/exceptions.c
    core/fifo.c
    core/fork_server.c
    core/fsmon.c
    core/gateway.c
    core/hash.c
    core/hooks.c
    core/ini.c
    core/init.c
    core/io.c
    core/json.c
    core/legion.c
    core/lock.c
    core/logging.c
    core/loop.c
    core/master.c
    core/master_checks.c
    core/master_events.c
    core/master_utils.c
    core/metrics.c
    core/mount.c
    core/mule.c
    core/notify.c
    core/offload.c
    core/plugins.c
    core/plugins_builder.c
    core/progress.c
    core/protocol.c
    core/querystring.c
    core/queue.c
    core/rb_timers.c
    core/reader.c
    core/regexp.c
    core/routing.c
    core/rpc.c
    core/sendfile.c
    core/setup_utils.c
    core/sharedarea.c
    core/signal.c
    core/skel.c
    core/snmp.c
    core/socket.c
    core/spooler.c
    core/ssl.c
    core/static.c
    core/stats.c
    core/storage.c
    core/strings.c
    core/subscription.c
    core/timebomb.c
    core/transformations.c
    core/utils.c
    core/uwsgi.c
    core/webdav.c
    core/websockets.c
    core/writer.c
    core/xmlconf.c
    core/yaml.c
    core/zeus.c
    core/zlib.c
    lib/linux_ns.c
    lib/netlink.c
    lib/sun_fixes.c
    plugins/airbrake/airbrake_plugin.c
    plugins/alarm_curl/alarm_curl_plugin.c
    plugins/alarm_xmpp/alarm_xmpp_plugin.c
    plugins/alarm_xmpp/gloox.cc
    plugins/asyncio/asyncio.c
    plugins/cache/cache.c
    plugins/carbon/carbon.c
    plugins/cgi/cgi_plugin.c
    plugins/cheaper_backlog2/cheaper_backlog2.c
    plugins/cheaper_busyness/cheaper_busyness.c
    plugins/clock_monotonic/clock_monotonic.c
    plugins/clock_realtime/clock_realtime.c
    plugins/corerouter/corerouter.c
    plugins/corerouter/cr.h
    plugins/corerouter/cr_common.c
    plugins/corerouter/cr_map.c
    plugins/coroae/coroae.c
    plugins/cplusplus/base.cc
    plugins/cplusplus/plugin.c
    plugins/curl_cron/curl_cron.c
    plugins/dumbloop/dumb.c
    plugins/dummy/dummy.c
    plugins/echo/echo_plugin.c
    plugins/emperor_amqp/amqp.c
    plugins/emperor_amqp/emperor_amqp.c
    plugins/emperor_mongodb/emperor_mongodb.cc
    plugins/emperor_mongodb/plugin.c
    plugins/emperor_pg/emperor_pg.c
    plugins/emperor_zeromq/emperor_zeromq.c
    plugins/example/example_plugin.c
    plugins/exception_log/exception_log.c
    plugins/fastrouter/fastrouter.c
    plugins/fiber/fiber.c
    plugins/forkptyrouter/forkptyrouter.c
    plugins/gccgo/gccgo_plugin.c
    plugins/geoip/geoip.c
    plugins/gevent/gevent.c
    plugins/gevent/gevent.h
    plugins/gevent/hooks.c
    plugins/glusterfs/glusterfs.c
    plugins/graylog2/graylog2_plugin.c
    plugins/greenlet/greenlet.c
    plugins/gridfs/gridfs.cc
    plugins/gridfs/plugin.c
    plugins/http/common.h
    plugins/http/http.c
    plugins/http/https.c
    plugins/http/keepalive.c
    plugins/http/spdy3.c
    plugins/http/spdy3.h
    plugins/jvm/jvm.h
    plugins/jvm/jvm_plugin.c
    plugins/jwsgi/jwsgi_plugin.c
    plugins/ldap/ldap.c
    plugins/legion_cache_fetch/legion_cache_fetch.c
    plugins/libffi/libffi.c
    plugins/libtcc/libtcc.c
    plugins/logcrypto/logcrypto.c
    plugins/logfile/logfile.c
    plugins/logpipe/logpipe.c
    plugins/logsocket/logsocket_plugin.c
    plugins/logzmq/plugin.c
    plugins/lua/lua_plugin.c
    plugins/matheval/math.c
    plugins/mongodb/plugin.c
    plugins/mongodblog/mongodblog_plugin.c
    plugins/mongrel2/mongrel2.c
    plugins/mono/mono_plugin.c
    plugins/msgpack/msgpack.c
    plugins/nagios/nagios.c
    plugins/notfound/notfound.c
    plugins/pam/pam.c
    plugins/php/common.h
    plugins/php/php_plugin.c
    plugins/php/session.c
    plugins/ping/ping_plugin.c
    plugins/psgi/psgi.h
    plugins/psgi/psgi_loader.c
    plugins/psgi/psgi_plugin.c
    plugins/psgi/psgi_response.c
    plugins/psgi/uwsgi_plmodule.c
    plugins/pty/pty.c
    plugins/pypy/pypy_plugin.c
    plugins/python/gil.c
    plugins/python/profiler.c
    plugins/python/pump_subhandler.c
    plugins/python/pyloader.c
    plugins/python/python_plugin.c
    plugins/python/pyutils.c
    plugins/python/raw.c
    plugins/python/symimporter.c
    plugins/python/tracebacker.c
    plugins/python/uwsgi_pymodule.c
    plugins/python/uwsgi_python.h
    plugins/python/web3_subhandler.c
    plugins/python/wsgi_handlers.c
    plugins/python/wsgi_headers.c
    plugins/python/wsgi_subhandler.c
    plugins/pyuwsgi/pyuwsgi.c
    plugins/rack/rack_api.c
    plugins/rack/rack_plugin.c
    plugins/rack/uwsgi_rack.h
    plugins/rados/rados.c
    plugins/rawrouter/rawrouter.c
    plugins/rbthreads/rbthreads.c
    plugins/redislog/redislog_plugin.c
    plugins/ring/ring_plugin.c
    plugins/router_access/router_access.c
    plugins/router_basicauth/router_basicauth.c
    plugins/router_cache/router_cache.c
    plugins/router_expires/expires.c
    plugins/router_hash/router_hash.c
    plugins/router_http/router_http.c
    plugins/router_memcached/router_memcached.c
    plugins/router_metrics/plugin.c
    plugins/router_radius/radius.c
    plugins/router_redirect/router_redirect.c
    plugins/router_redis/router_redis.c
    plugins/router_rewrite/router_rewrite.c
    plugins/router_spnego/router_spnego.c
    plugins/router_static/router_static.c
    plugins/router_uwsgi/router_uwsgi.c
    plugins/router_xmldir/router_xmldir.c
    plugins/rpc/rpc_plugin.c
    plugins/rrdtool/rrdtool.c
    plugins/rsyslog/rsyslog_plugin.c
    plugins/servlet/servlet_plugin.c
    plugins/signal/signal_plugin.c
    plugins/spooler/spooler_plugin.c
    plugins/sqlite3/plugin.c
    plugins/ssi/ssi.c
    plugins/sslrouter/sslrouter.c
    plugins/stackless/stackless.c
    plugins/stats_pusher_file/plugin.c
    plugins/stats_pusher_mongodb/plugin.c
    plugins/stats_pusher_mongodb/stats_pusher_mongodb.cc
    plugins/stats_pusher_socket/plugin.c
    plugins/stats_pusher_statsd/plugin.c
    plugins/symcall/symcall_plugin.c
    plugins/syslog/syslog_plugin.c
    plugins/systemd_logger/systemd_logger.c
    plugins/tornado/tornado.c
    plugins/transformation_chunked/chunked.c
    plugins/transformation_gzip/gzip.c
    plugins/transformation_offload/offload.c
    plugins/transformation_template/tt.c
    plugins/transformation_tofile/tofile.c
    plugins/transformation_toupper/toupper.c
    plugins/tuntap/common.c
    plugins/tuntap/common.h
    plugins/tuntap/firewall.c
    plugins/tuntap/tuntap.c
    plugins/ugreen/ugreen.c
    plugins/v8/plugin.c
    plugins/v8/v8_commonjs.cc
    plugins/v8/v8_jsgi.cc
    plugins/v8/v8_uwsgi.cc
    plugins/v8/v8_uwsgi.h
    plugins/webdav/webdav.c
    plugins/xattr/xattr.c
    plugins/xslt/xslt.c
    plugins/zabbix/plugin.c
    plugins/zergpool/zergpool.c
    proto/base.c
    proto/fastcgi.c
    proto/http.c
    proto/puwsgi.c
    proto/scgi.c
    proto/uwsgi.c
    uwsgi.h
    uwsgi_main.c)

add_executable(uwsgi ${SOURCE_FILES})